# deck-of-cards

./: README.md  card_deck.py  setup.cfg
src/deck_of_cards/: __main__.py  app.py
