[metadata]
name = deck-of-cards
version = attr: deck-of-cards.__version__
author = TomJGooding
description = A deck of cards in the terminal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TomJGooding/deck-of-cards
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
python_requires = >=3.7
package_dir =
    = src
packages = find:
install_requires =
    textual >= 0.24.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pytest
    pytest-cov
    textual-dev
